--- a/week10/style.css
+++ b/week10/style.css
@@ -7,7 +7,6 @@ body {
     margin: 0;
 }
 
-
 .form-container {
     background-color: #fff;
     padding: 20px;
@@ -18,7 +17,7 @@ body {
     width: 300px;
 }
 
-input[type="text"],input[type="password"],input[type="email"],input[type="add"]{
+input[type="text"],input[type="password"],input[type="email"],input[type="add"],input[type="address"],input[type="numberphone"],input[type="namereal"]{
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
@@ -27,6 +26,14 @@ input[type="text"],input[type="password"],input[type="email"],input[type="add"]{
     font-size: 16px;
 }
 
+input[type="Box"] {
+    width: 300px;
+    padding: 10px; 
+    font-size: 16px; 
+    border: 2px solid rgb(191, 0, 95); 
+    border-radius: 5px; 
+    box-sizing: border-box;
+}
 
 input[type="submit"] {
     background-color: rgb(238, 0, 151); 
@@ -39,7 +46,122 @@ input[type="submit"] {
     border-radius: 5px;
 }
 
-
 input[type="submit"]:hover {
     background-color: rgb(191, 0, 95);
+}
+.form-container {
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+.form-link {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.form-link a {
+    font-size: 12px;
+    color: #ff00b7;
+    margin-left: auto;
+    text-decoration: none;
+}
+.form-links {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.form-links a {
+    font-size: 12px;
+    color: #ff00b7;
+    text-decoration: none;
+}
+
+.submit-btn1 { 
+    background-color: rgb(238, 0, 151);
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    width: 100%;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+h4 {
+    color: rgb(191, 0, 95);
+    text-align: center;
+    margin: 20px 0;
+}
+
+.social-btn {
+    font-size: 16px;
+    padding: 20px 40px;
+    border: 2px solid #ff0095;
+    background-color: transparent;
+    color: #ff0073;
+    width: 100%;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 5px 0;
+}
+.social-btn:hover {
+    background-color: #ff0095;
+    color: white;
+}
+.image-container {
+    display: flex;  
+    gap: 20px;  
+    justify-content: center; 
+}
+
+.image-container img {
+    object-fit: cover;
+}
+
+.form-container {
+    text-align: center; 
+}
+
+.submit-btnsearch {
+    padding: 10px 15px;
+    font-size: 16px;
+    background-color: rgb(191, 0, 95);
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.submit-btn:hover {
+    background-color: rgb(150, 0, 70);
+}
+
+.form-containers {
+    background-color: #fff;
+    width: auto;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 20px;
+    box-shadow: 0 0 20px rgba(238, 0, 151, 0.5);
+    border: 2px solid rgb(238, 0, 151);
+    text-align: center;   
+}
+
+.input-container {
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+    gap: 10px; 
+}
+
+.btn {
+    padding: 15px 30px; 
+    font-size: 16px; 
+    background-color: rgb(191, 0, 95);
+    color: white;
+    border: none;
+    cursor: pointer;
+    max-width: 300px; 
 }
